# crawleval

./: .gitattributes  .gitignore  LICENSE  README.md  eval_data_extract.dvc  example_urls.txt  pyproject.toml  ruff.toml
.dvc/: config
crawleval/: INSTRUCTIONS.md  README.md  fetch_webpage.py  models.py  rename_files.py  urls.txt
eval_data_extract/: hash_index.json  url_index.json
eval_data_extract/html/: 0001.html  0002.html  0003.html  0004.html  0005.html  0006.html  0007.html  0008.html  0009.html  0010.html  0011.html  0012.html
eval_data_extract/metadata/: 0001.json  0002.json  0003.json  0004.json  0005.json  0006.json  0007.json  0008.json  0009.json  0010.json  0011.json  0012.json
