[project]
name = "crawleval"
version = "0.1.0"
description = "Resources and tools for evaluating the performance and behavior of web crawling systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.4",
    "datasets>=2.18.0",
    "requests>=2.32.3",
    "beautifulsoup4>=4.13.4",
    "selenium>=4.32.0",
    "rich>=14.0.0",
    "dvc[s3]>=3.59.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]
